[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ultracontext"
version = "1.0.1"
description = "The context API for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{ name = "UltraContext", email = "fabio@ultracontext.ai" }]
keywords = ["ai", "agents", "context", "llm", "api"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = ["httpx>=0.24.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0", "mypy>=1.0.0"]

[project.urls]
Homepage = "https://ultracontext.ai"
Documentation = "https://ultracontext.ai/docs"
Repository = "https://github.com/ultracontext/ultracontext-python"

[tool.hatch.build.targets.wheel]
packages = ["ultracontext"]

[tool.mypy]
strict = true
